@@ -143,6 +143,16 @@
 		<Return name="f" />
 	</Command>
 
+	<Command name="cfrac" enabled="true">
+	        <CreateCommand name="f">
+			<Argument type="String" value="org.scilab.forge.jlatexmath.predefMacros" />
+			<Argument type="String" value="cfrac_macro" />
+			<Argument type="float" value="2" />
+			<Argument type="float" value="1" />
+		</CreateCommand>
+		<Return name="f" />
+	</Command>
+
 	<Command name="frac" enabled="true">
 		<CreateCommand name="f">
 			<Argument type="String" value="org.scilab.forge.jlatexmath.predefMacros" />
