@@ -1,4 +1,6 @@
 jlatexmath (0.9.2)
+        * Add cfrac macro
+
 	* Possibility to have empty columns in array
 	 
  -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>
